--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -11,8 +11,11 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass portfolio-phpcode-znf1sp-php-1:9000;
+        fastcgi_pass php:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 4 256k;
+        fastcgi_busy_buffers_size 256k;
     }
 }
