--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -2,17 +2,19 @@ server {
     listen 80;
     server_name me.soloengine.in;
     root /var/www/html;
-    index index.php index.html;
+    index index.php index.html index.htm;
 
     location / {
-        index index.php;
         try_files $uri /index.php$is_args$args;
     }
 
     location ~ \.php$ {
-    include fastcgi.conf;
-    fastcgi_pass php:9000;
-    fastcgi_index index.php;
-    fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
-}
+        include fastcgi.conf;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
+    }
+
+    error_log /var/log/nginx/error.log warn;
+    access_log /var/log/nginx/access.log combined;
 }
