--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location ~ \.php$ {
-        include fastcgi.conf;
+        include fastcgi_params;
         fastcgi_pass php:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
