--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name me.soloengine.in;
     root /var/www/html;
-    index index.php index.html index.htm;
+    index index.php index.html;
 
     location / {
         try_files $uri /index.php$is_args$args;
@@ -14,7 +14,4 @@ server {
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
     }
-
-    error_log /var/log/nginx/error.log warn;
-    access_log /var/log/nginx/access.log combined;
 }
