--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,9 @@
-# Remove 'version' attribute as it's obsolete according to Dokploy
-
 services:
   php:
     build:
       context: .docker/php
-    # Remove hardcoded container names - let Dokploy handle naming
     volumes:
-      - ./:/var/www/html
+      - ./public:/var/www/html
     networks:
       - dokploy-network
     expose:
@@ -15,10 +12,8 @@ services:
   nginx:
     image: nginx:latest
     volumes:
-      - ./:/var/www/html
+      - ./public:/var/www/html
       - ./.docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    # Let Traefik handle port exposure instead of direct port binding
-    # This prevents port conflicts when multiple services run on the same host
     expose:
       - 80
     depends_on:
