--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -12,6 +12,12 @@ server {
         include fastcgi_params;
         fastcgi_pass php:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
+    }
+
+    location ~ /\.ht {
+        deny all;
     }
 }
