--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -6,3 +6,10 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install pdo pdo_sqlite
 
 WORKDIR /var/www/html
+
+
+# Copy your PHP application into the container
+COPY . /var/www/html
+
+# Optional: Set correct permissions if needed
+# RUN chown -R www-data:www-data /var/www/html
