--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -12,4 +12,4 @@ WORKDIR /var/www/html
 COPY . /var/www/html
 
 # Optional: Set correct permissions if needed
-# RUN chown -R www-data:www-data /var/www/html
+RUN chown -R www-data:www-data /var/www/html
