--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,44 @@
-version: "3.8"
+# Dokploy-compatible configuration optimized for PHP application
 
 services:
-  php:
+  web:
     build:
       context: .docker/php
+      dockerfile: Dockerfile
     volumes:
-      - ./public:/var/www/html
-    networks:
-      - dokploy-network
-    expose:
-      - 9000
+      - ./:/var/www/html
     restart: unless-stopped
-
-  nginx:
-    image: nginx:latest
-    volumes:
-      - ./public:/var/www/html
-      - ./.docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    expose:
-      - 80
-    depends_on:
-      - php
-    networks:
-      - dokploy-network
     labels:
+      - dokploy.enable=true
+      - dokploy.type=web
+      - dokploy.port=9000
+      - dokploy.protocol=fastcgi
+      - dokploy.documentRoot=/var/www/html
       - traefik.enable=true
-
-      # HTTP router to redirect to HTTPS
-      - traefik.http.routers.me-http.rule=Host(`me.soloengine.in`)
-      - traefik.http.routers.me-http.entrypoints=web
-      - traefik.http.routers.me-http.middlewares=redirect-to-https
-
-      # HTTPS router serving traffic
-      - traefik.http.routers.me-https.rule=Host(`me.soloengine.in`)
-      - traefik.http.routers.me-https.entrypoints=websecure
-      - traefik.http.routers.me-https.tls.certresolver=letsencrypt
-      - traefik.http.routers.me-https.service=me-service
-
-      # Service definition
-      - traefik.http.services.me-service.loadbalancer.server.port=80
-
-      # Middleware to redirect HTTP to HTTPS
-      - traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https
-
-    restart: unless-stopped
+      - traefik.http.routers.${DOKPLOY_PROJECT_NAME}-web.rule=Host(`me.soloengine.in`)
+      - traefik.http.routers.${DOKPLOY_PROJECT_NAME}-web.entrypoints=websecure
+      - traefik.http.routers.${DOKPLOY_PROJECT_NAME}-web.tls=true
+      - traefik.http.routers.${DOKPLOY_PROJECT_NAME}-web.tls.certresolver=letsencrypt
+      # HTTP to HTTPS redirect
+      - traefik.http.routers.${DOKPLOY_PROJECT_NAME}-web-http.rule=Host(`me.soloengine.in`)
+      - traefik.http.routers.${DOKPLOY_PROJECT_NAME}-web-http.entrypoints=web
+      - traefik.http.routers.${DOKPLOY_PROJECT_NAME}-web-http.middlewares=${DOKPLOY_PROJECT_NAME}-web-redirect
+      - traefik.http.middlewares.${DOKPLOY_PROJECT_NAME}-web-redirect.redirectscheme.scheme=https
+      - traefik.http.middlewares.${DOKPLOY_PROJECT_NAME}-web-redirect.redirectscheme.permanent=true
+      # Security headers
+      - traefik.http.middlewares.${DOKPLOY_PROJECT_NAME}-security-headers.headers.browserXssFilter=true
+      - traefik.http.middlewares.${DOKPLOY_PROJECT_NAME}-security-headers.headers.contentTypeNosniff=true
+      - traefik.http.middlewares.${DOKPLOY_PROJECT_NAME}-security-headers.headers.forceSTSHeader=true
+      - traefik.http.middlewares.${DOKPLOY_PROJECT_NAME}-security-headers.headers.stsIncludeSubdomains=true
+      - traefik.http.middlewares.${DOKPLOY_PROJECT_NAME}-security-headers.headers.stsPreload=true
+      - traefik.http.middlewares.${DOKPLOY_PROJECT_NAME}-security-headers.headers.stsSeconds=31536000
+      - traefik.http.routers.${DOKPLOY_PROJECT_NAME}-web.middlewares=${DOKPLOY_PROJECT_NAME}-security-headers
 
   wkhtmltopdf:
     build:
       context: .docker/wkhtmltopdf
-    networks:
-      - dokploy-network
     restart: unless-stopped
+    labels:
+      - dokploy.enable=true
 
-networks:
-  dokploy-network:
-    external: true
+# No need to define networks - Dokploy handles this automatically
