--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,9 @@ services:
       traefik.http.routers.me_soloengine_in.entrypoints: web
       traefik.http.routers.me_soloengine_in.tls: false
       traefik.http.services.me_soloengine_in.loadbalancer.server.port: 80
+    networks:
+      - dokploy-traefik
+
+networks:
+  dokploy-traefik:
+    external: true
