--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
       traefik.http.routers.me_soloengine_in.tls: false
       traefik.http.services.me_soloengine_in.loadbalancer.server.port: 80
     networks:
-      - dokploy-traefik
+      - dokploy-network
 
 networks:
-  dokploy-traefik:
+  dokploy-network:
     external: true
