chanegs doker compose for swarm configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,15 @@ services:
       dockerfile: Dockerfile
     volumes:
       - .:/var/www/html
-    labels:
-      traefik.enable: true
-      traefik.http.routers.me_soloengine_in.rule: Host(`me.soloengine.in`)
-      traefik.http.routers.me_soloengine_in.entrypoints: web
-      traefik.http.routers.me_soloengine_in.tls: false
-      traefik.http.services.me_soloengine_in.loadbalancer.server.port: 80
     networks:
       - dokploy-network
+    deploy:
+      labels:
+        - "traefik.enable=true"
+        - "traefik.http.routers.me_soloengine_in.rule=Host(`me.soloengine.in`)"
+        - "traefik.http.routers.me_soloengine_in.entrypoints=web"
+        - "traefik.http.routers.me_soloengine_in.tls=false"
+        - "traefik.http.services.me_soloengine_in.loadbalancer.server.port=80"
 
 networks:
   dokploy-network:
