--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,20 +4,14 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile    
+      dockerfile: Dockerfile
     command: >
-      bash -c "mkdir -p /var/www/html/data &&
-               mkdir -p /var/www/html/backup &&
-               chmod +x /var/www/html/db_manager.sh &&
-               /var/www/html/db_manager.sh check &&
-               chown -R www-data:www-data /var/www/html &&
+      bash -c "chown -R www-data:www-data /var/www/html &&
                chmod -R 755 /var/www/html &&
-               chmod -R 777 /var/www/html/data &&
-               chmod -R 777 /var/www/html/backup &&
                apache2-foreground"
     volumes:
+      - ./data:/var/www/html/data
       - .:/var/www/html
-      - portfolio_database:/var/www/html/data
     networks:
       - dokploy-network
     deploy:
@@ -28,10 +22,10 @@ services:
         - "traefik.http.routers.me_soloengine_in.tls=false"
         - "traefik.http.services.me_soloengine_in.loadbalancer.server.port=80"
 
-volumes:
-  portfolio_database:
-    name: portfolio_database_data
-
 networks:
   dokploy-network:
     external: true
+
+volumes:
+  portfolio-data:
+    driver: local
